--- a/index.html
+++ b/index.html
@@ -226,16 +226,20 @@ https://templatemo.com/tm-528-elegance
                                         <i class="fa-brands fa-react"></i>Django
                                     </div>    
                                 </div>
-                                
-                                
-                                <div>
-                                    <i class="fa-brands fa-react"></i>Postgresql
+                                <div class="icon-stack">
+                                    <div>
+                                        <i class="fa-brands fa-react"></i>Postgresql
+                                    </div>
                                 </div>
-                                <div>
-                                    <i class="fa-brands fa-react"></i>Sql
+                                <div class="icon-stack">
+                                    <div>
+                                        <i class="fa-brands fa-react"></i>Sql
+                                    </div>    
                                 </div>
-                                <div>
-                                    <i class="fa-brands fa-react"></i>Mark Downn
+                                <div class="icon-stack">
+                                    <div>
+                                        <i class="fa-brands fa-react"></i>Mark Downn
+                                    </div>    
                                 </div>
                             </div>
                         </div>
