--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ https://templatemo.com/tm-528-elegance
                                 <span>My Skills</span>
                                 <h2>Tech Stack</h2>
                             </div>
-                            <div class="skills-row animate" data-animate="fadeInDown">
+                            <div class="techStack animate" data-animate="fadeInDown">
                                 <div>
                                     <div class="icon-stack">
                                         <div>
