--- a/index.html
+++ b/index.html
@@ -511,6 +511,8 @@
                 <ul class="social-icons">
                     <li><a href="https://github.com/Eyuel-Nigussie" title="GitHub" target="_blank"><i class="fa fa-github"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/eyuel-nigussie-0a0b8a251/" title="Linkedin" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://dribbble.com/Eyuel_N" title="Dribbble" target="_blank"><i class="fa fa-dribbble"></i></a></li>
+                    <li><a href="https://medium.com/@eyuthedev/" title="Medium" target="_blank"><i class="fa fa-medium"></i></a></li>
                 </ul>
             </div>
         </div>
